objects/ASI_CRM_City_Target__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_City_c__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>City</label>
        <referenceTo>ASI_CRM_City__c</referenceTo>
        <relationshipLabel>City Targets</relationshipLabel>
        <relationshipName>City_Targets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Fiscal_Year1_c__c</fullName>
        <label>Fiscal Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Period_c__c</fullName>
        <label>Period</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Region_c__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region</label>
        <referenceTo>gvp__Region__c</referenceTo>
        <relationshipLabel>City Targets</relationshipLabel>
        <relationshipName>City_Targets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Subbrand_c__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-brand</label>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipLabel>City Targets</relationshipLabel>
        <relationshipName>City_Targets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Target_c__c</fullName>
        <label>Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>City Target</label>
    <nameField>
        <label>City Target Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>City Targets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>